Add win animation, draw message, and reset button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <div class="game-container"></div>
+    <span class="draw-msg hide-draw-msg">Draw!</span>
+    <button class="restart-btn hide-btn">Play again</button>
 
     <script src="app.js"></script>
   </body>
